# CG_AB

./: CmakeLists.txt  README.md  build.cmd
Lab_1/: README.md
Lab_1/include/: CmykSlider.h  ColorController.h  HsvSlider.h  RgbSlider.h
Lab_1/source/: CmykSlider.cpp  ColorController.cpp  HsvSlider.cpp  RgbSlider.cpp  main.cpp
Lab_2/: CMakeLists.txt  README.md
Lab_2/include/: ColorController.h
Lab_2/source/: main.cpp
Lab_3/: CMakeLists.txt  README.md
Lab_3/include/: RasterController.h
Lab_3/source/: RasterController.cpp  main.cpp
